# PatternRecognitionSystems

./: NL1-cityscapes-semantic-segmentation.ipynb  NL2-cifar+mnist_SEGM.ipynb  NL3-keras_segmentation.ipynb.ipynb
1_aexam/: Rezolvari.docx
IP/OpenCVApplication-VS2017_OCV340_basic/: CMakeLists.txt  OpenCVApplication.cpp
LABS/lab/OpenCVApplication-VS2017_OCV340_basic/: CMakeLists.txt  IPFunctions.cpp  OpenCVApplication-8.cpp  OpenCVApplication.cpp  covariance.cpp  exam.cpp
Lab1_NeaguLorena/: OpenCVApplication.cpp
